--- a/roles/db_prep/tasks/main.yml
+++ b/roles/db_prep/tasks/main.yml
@@ -1,92 +1,69 @@
 ---
-# Setup ODBC connector
--
-  name: Download MariaDB Connector
-  ansible.builtin.get_url:
-    url: https://cdn.mysql.com/archives/mysql-connector-odbc-5.3/mysql-connector-odbc-5.3.10-linux-ubuntu17.10-x86-64bit.tar.gz
-    dest: /usr/src/mysql-connector-odbc-5.3.10-linux-ubuntu17.10-x86-64bit.tar.gz
-    mode: '0664'
--
-  name: Untar MariaDB Connector
-  ansible.builtin.unarchive:
-    src: /usr/src/mysql-connector-odbc-5.3.10-linux-ubuntu17.10-x86-64bit.tar.gz
-    dest: /usr/src
-    remote_src: true
--
-  name: Copy ODBC Connector lib files
-  ansible.builtin.copy:
-    remote_src: true
-    src: /usr/src/mysql-connector-odbc-5.3.10-linux-ubuntu17.10-x86-64bit/lib/
-    dest: /usr/lib/odbc
-    mode: u=rwx,g=rx,o=rx
--
-  name: Change DB listener from localhost to all interfaces
-  ansible.builtin.replace:
-    path: /etc/mysql/mariadb.conf.d/50-server.cnf
-    regexp: '127.0.0.1'
-    replace: '0.0.0.0'
--
-  name: Disable Strict Trans Tables mode
+- name: Ensure MariaDB service is running and enabled
+  ansible.builtin.systemd:
+    name: mariadb
+    state: started
+    enabled: yes
+
+- name: Change DB listener from localhost to all interfaces (0.0.0.0)
   ansible.builtin.lineinfile:
     path: /etc/mysql/mariadb.conf.d/50-server.cnf
-    insertafter: [mysqld]
-    line: sql_mode=''
+    regexp: '^bind-address\s*=\s*127\.0\.0\.1'
+    line: "bind-address = 0.0.0.0"
+    backrefs: yes
+  notify: Restart mariadb
 
-## START: Secure DB
--
-  name: Secure DB - Set root password
-  failed_when: >
-    (db_root_pass is not defined) or
-    (db_root_pass == "")
+- name: Ensure sql_mode is not overly strict (remove STRICT_TRANS_TABLES)
+  ansible.builtin.blockinfile:
+    path: /etc/mysql/mariadb.conf.d/50-server.cnf
+    block: |
+      [mysqld]
+      # Set a less strict SQL mode compatible with FreePBX/Asterisk
+      # Example: Remove STRICT_TRANS_TABLES, NO_ZERO_IN_DATE, NO_ZERO_DATE if they cause issues
+      # Check FreePBX/Asterisk docs for recommended modes if defaults cause problems
+      # Setting it empty might be too permissive, consider specific modes needed.
+      # sql_mode='ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION' # Example
+      sql_mode='' # Original setting - use with caution, check compatibility
+    marker: "# {mark} ANSIBLE MANAGED BLOCK sql_mode"
+    insertafter: '^\[mysqld\]'
+  notify: Restart mariadb
+
+- name: Set MariaDB root password for localhost access
   community.mysql.mysql_user:
     login_unix_socket: /var/run/mysqld/mysqld.sock
     name: root
-    host: "{{ item }}"
+    host: localhost
     password: "{{ db_root_pass }}"
     state: present
-  with_items:
-    - 127.0.0.1
-    - ::1
-    - localhost
--
-  name: Secure DB - delete anonymous users
+
+- name: Remove anonymous MariaDB users
   community.mysql.mysql_user:
-    login_unix_socket: /var/run/mysqld/mysqld.sock
-    login_user: "root"
+    login_user: root
     login_password: "{{ db_root_pass }}"
     name: ""
-    host: "{{ item }}"
+    host_all: yes
     state: absent
-  with_items:
-    - localhost
-    - "{{ ansible_nodename }}"
--
-  name: Secure DB - delete hostname based root
-  community.mysql.mysql_user:
-    login_unix_socket: /var/run/mysqld/mysqld.sock
-    login_user: "root"
-    login_password: "{{ db_root_pass }}"
-    name: root
-    host: "{{ ansible_nodename }}"
-    state: absent
--
-  name: Secure DB - Remove Test DB
+
+- name: Remove MariaDB 'test' database
   community.mysql.mysql_db:
-    login_unix_socket: /var/run/mysqld/mysqld.sock
-    login_user: "root"
+    login_user: root
     login_password: "{{ db_root_pass }}"
     name: test
     state: absent
--
-  name: Disable linux socket root login
-  community.mysql.mysql_query:
-    login_user: "root"
-    login_password: "{{ db_root_pass }}"
-    query: UPDATE mysql.user SET plugin = '' WHERE user = 'root' AND host = 'localhost'
-  ignore_errors: true
-## END Secure DB
 
-- name: Restart mysql service
-  ansible.builtin.systemd:
-    name: mysql
-    state: restarted
+- name: Create 'asteriskcdrdb' database
+  community.mysql.mysql_db:
+    login_user: root
+    login_password: "{{ db_root_pass }}"
+    name: asteriskcdrdb
+    state: present
+
+- name: Create 'freepbxuser' for FreePBX database access
+  community.mysql.mysql_user:
+    login_user: root
+    login_password: "{{ db_root_pass }}"
+    name: "{{ db_fpbx_user }}"
+    password: "{{ db_fpbx_pass }}"
+    host: localhost
+    priv: "asteriskcdrdb.*:ALL/freepbx.*:ALL"
+    state: present
