--- a/roles/webmin/tasks/main.yml
+++ b/roles/webmin/tasks/main.yml
@@ -1,17 +1,18 @@
 ---
-- 
-  name: Add Apt Key
-  apt_key:
-    url: http://www.webmin.com/jcameron-key.asc
+- name: Add Webmin repository key
+  ansible.builtin.apt_key:
+    url: https://download.webmin.com/jcameron-key.asc
     state: present
--
-  name: Add Webmin Repo
-  apt_repository:
-    repo: deb http://download.webmin.com/download/repository sarge contrib
+
+- name: Add Webmin repository
+  ansible.builtin.apt_repository:
+    repo: deb https://download.webmin.com/download/repository stable contrib
     state: present
--
-  name: Install webmin
-  apt:
-    name: webmin
+    filename: webmin
     update_cache: yes
+
+- name: Install webmin package
+  ansible.builtin.apt:
+    name: webmin
     state: present
+    update_cache: no
