--- a/roles/sysprep/tasks/main.yml
+++ b/roles/sysprep/tasks/main.yml
@@ -97,6 +97,12 @@
     state: present
     install_recommends: yes
 
+- name: Create the 'asterisk' system group
+  ansible.builtin.group:
+    name: asterisk
+    system: yes
+    state: present
+
 - name: Create the 'asterisk' system user and group
   ansible.builtin.user:
     name: asterisk
@@ -105,6 +111,7 @@
     create_home: no
     group: asterisk
     shell: /sbin/nologin
+    state: present
 
 - name: Add apache user to asterisk group (for FreePBX web UI access)
   ansible.builtin.user:
